# RT-GameServer-ECS-FPS-Arena.

./: .clangd  CMakeLists.txt  DEVELOPMENT_PLAN.md  PROJECT_DOCUMENTATION.md  TASKS.md  build-gameclient.bat  build.bat
assets/: AssetManager.cpp  AssetManager.hpp
assets/maps/: map.ldtk
components/: CollisionComponent.hpp
ecs/: Component.hpp
include/common/: types.hpp
ldtk/: LDtkParser.cpp  LDtkParser.hpp  LevelRenderer.cpp  LevelRenderer.hpp
sprites/: map.json
src/: GameClient.cpp  MiniGameViewer.cpp  Server.cpp  main.cpp  test_ecs.cpp
src/core/: Component.hpp  ComponentRegistry.hpp  ComponentStorage.hpp  Entity.hpp  System.hpp  SystemManager.hpp  World.cpp  World.hpp
src/core/components/: PositionComponent.hpp  SpriteComponent.hpp  VelocityComponent.hpp
src/core/systems/: MovementSystem.hpp
src/game/: GameClient.cpp  GameClient.hpp  GameConstants.hpp  GameController.cpp  GameController.hpp  GameModel.cpp  GameModel.hpp  GameView.cpp  GameView.hpp  PlayerCollision.cpp  PlayerCollision.hpp
src/network/: Address.hpp  Packet.hpp  PacketTypes.hpp
src/server/: CollisionHelper.cpp  CollisionHelper.hpp  GameServer.cpp  GameServer.hpp  ServerConfig.hpp  ServerNetworkManager.cpp  ServerNetworkManager.hpp  main.cpp
src/server/systems/: CollisionSystem.cpp  CollisionSystem.hpp
systems/: MovementSystem.hpp  PhysicsSystem.hpp
